<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_checkout"
    tools:context=".ui.order.CheckoutFragment">

    <!-- TODO: Add the data binding variables of the type OrderViewModel and the CheckoutFragment -->
    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <variable
            name="checkoutFragment"
            type="com.example.lunchtray.ui.order.CheckoutFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <TextView
                android:id="@+id/order_summary"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/order_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- TODO: display the entree name based on the entree selection -->
            <TextView
                android:id="@+id/entree_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_summary"
                android:text="@{viewModel.entree.name.toString()}"
                tools:text="Cauliflower" />

            <!-- TODO: display the entree price based on the entree selection -->
            <TextView
                android:id="@+id/entree_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/entree_selection"
                android:text="@{viewModel.entree.formattedPrice}"
                tools:text="$7.00"/>

            <!-- TODO: display the side name based on the side selection -->
            <TextView
                android:id="@+id/side_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entree_selection"
                android:text="@{viewModel.side.name.toString()}"
                tools:text="Spicy Potatoes" />

            <!-- TODO: display the side price based on the side selection -->
            <TextView
                android:id="@+id/side_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/side_selection"
                android:text="@{viewModel.side.formattedPrice}"
                tools:text="$2.00"/>

            <!-- TODO: display the accompaniment name based on the accompaniment selection -->
            <TextView
                android:id="@+id/accompaniment_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_selection"
                android:text="@{viewModel.accompaniment.name.toString()}"
                tools:text="Mixed Berries" />

            <!-- TODO: display the accompaniment price based on the accompaniment selection -->
            <TextView
                android:id="@+id/accompaniment_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/accompaniment_selection"
                android:text="@{viewModel.accompaniment.formattedPrice}"
                tools:text="$1.00"/>

            <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accompaniment_selection" />

            <!-- TODO: set the text to the current subtotal value from the view model -->
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:text="@{@string/subtotal(viewModel.subtotal)}"
                tools:text="Subtotal: $10.00"/>

            <!-- TODO: set the text to the current tax value from the view model -->
            <TextView
                android:id="@+id/tax"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                android:text="@{@string/tax(viewModel.tax)}"
                tools:text="Tax: $0.73"/>

            <!-- TODO: set the text to the current total value from the view model -->
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tax"
                android:text="@{@string/total(viewModel.total)}"
                tools:text="Total: $10.73"/>

            <!-- TODO: submit the order when clicked -->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total"
                android:onClick="@{() -> checkoutFragment.submitOrder()}" />

            <!-- TODO: cancel the order when clicked -->
            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_button"
                android:onClick="@{() -> checkoutFragment.cancelOrder()}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>